# ro-crate-interoperability-profile

./: .gitignore  README.md
0.1.x/: spec.md
0.2.x/: schema.shacl  spec.md
0.2.x/examples/quickstart/: Quickstart.java  quickstart.sql
0.2.x/examples/reference-openbis-export/: metadata.xlsx
0.2.x/examples/ro-crate-1.1/ro-crate-metadata/: ro-crate-metadata.json
0.2.x/lib/example/obenbis-one-publication/: ro-crate-metadata.json
0.2.x/lib/java/src/java/ch/ethz/sis/rocrate/facade/: ISchemaFacade.java  RdfsClass.java
0.2.x/lib/python/lib-ro-crate-schema/: FULL_EXAMPLE_EXPLANATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  README.md  TECHNICAL.md  architecture.puml  class_diagram.puml  pyproject.toml  run_all_tests.py  run_tests.py  test.shacl
0.2.x/lib/python/lib-ro-crate-schema/examples/: circular_import_test.py  decorator_example.py  examples.py  experimental_observations.csv  export_import_pydantic_demo.py  full_example.py  minimal_import_example.py  minimal_pydantic_example.py  python_quickstart_read.py  python_quickstart_write.py
0.2.x/lib/python/lib-ro-crate-schema/output_crates/test_decorator_id_output/: ro-crate-metadata.json
0.2.x/lib/python/lib-ro-crate-schema/output_crates/test_get_crate_output/: ro-crate-metadata.json
0.2.x/lib/python/lib-ro-crate-schema/output_crates/test_simple/: ro-crate-metadata.json
0.2.x/lib/python/lib-ro-crate-schema/output_crates/test_standalone_output/: ro-crate-metadata.json
0.2.x/lib/python/lib-ro-crate-schema/output_crates/test_write_output/: ro-crate-metadata.json
0.2.x/lib/python/lib-ro-crate-schema/src/lib_ro_crate_schema/: __init__.py  check.py
0.2.x/lib/python/lib-ro-crate-schema/src/lib_ro_crate_schema/crate/: __init__.py  decorators.py  forward_ref_resolver.py  jsonld_utils.py  literal_type.py  metadata_entry.py  owl_restriction.py  prefix.py  property_type.py  rdf.py  rdfs_class.py  reconstruction.py  registry.py  restriction.py  ro.py  ro_constants.py  schema_facade.py  schema_registry.py  type.py  type_property.py
0.2.x/lib/python/lib-ro-crate-schema/src/lib_ro_crate_schema/example/: examples.py
0.2.x/lib/python/lib-ro-crate-schema/src/lib_ro_crate_schema/utils/: jsonld_utils.py
0.2.x/lib/python/lib-ro-crate-schema/tests/: __init__.py  schema.shacl  test_context_detection.py  test_decorator_id.py  test_export.py  test_get_crate.py  test_import.py  test_integration.py  test_metadata_entry.py  test_published_package.py  test_pydantic_export.py  test_restriction.py  test_roundtrip.py  test_schema_facade.py  test_standalone_elements.py  test_type.py  test_type_property.py  test_unknown_namespaces.py
0.2.x/lib/test-data/test-01-import-ro-crate-metadata/: readme.txt
0.2.x/lib/test-data/test-02-export-ro-crate-metadata/: readme.txt
0.2.x/lib/test-data/test-03-import-export-ro-crate-metadata/: readme.txt
0.2.x/lib/test-data/test-04-import-ro-crate-metadata-data/: readme.txt
0.2.x/lib/test-data/test-05-export-ro-crate-metadata-data/: readme.txt
0.2.x/lib/test-data/test-06-import-export-ro-crate-metadata-data/: readme.txt
0.2.x/presentation/: 2025-10-13-premise-online-sync.pptx
