[project]
name = "lib-ro-crate-schema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simone Baffelli", email = "simone.baffelli@empa.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-rdf>=0.2.0",
    "pyld>=2.0.4",
    "pyshacl>=0.30.1",
    "rdflib-jsonld>=0.6.2",
    "rocrate>=0.14.0",
]

[project.scripts]
check = "lib_ro_crate_schema.check:main"
example = "lib_ro_crate_schema.example.examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
