[project]
name = "lib-ro-crate-schema"
version = "0.1.0"
description = "Import and export Ro crate"
readme = "README.md"
authors = [
    { name = "Simone Baffelli", email = "simone.baffelli@empa.ch" },
    { name = "Pascal Su", email = "pascal.su@empa.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pyld>=2.0.4",
    "pyshacl>=0.30.1",
    "rdflib>=7.1.4",
    "rocrate>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
check = "lib_ro_crate_schema.check:main"
example = "lib_ro_crate_schema.example.examples:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
